--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "jsanga-des/php-sharepoint-graph-api",
     "description": "PHP Client for Microsoft Graph API - SharePoint Operations",
     "type": "library",
-    "license": "MIT",
+    "license": "GPL-3.0-or-later",
     "keywords": ["sharepoint", "microsoft-graph", "php", "api-client", "office365"],
     "authors": [
         {
@@ -10,17 +10,24 @@
             "email": "jsangallego@gmail.com"
         }
     ],
-    "require": {
-        "php": ">=7.4",
-        "ext-curl": "*",
-        "ext-json": "*",
-        "firebase/php-jwt": "^6.11"
-    },
     "autoload": {
         "psr-4": {
-            "SharePointClient\\": "src/"
+            "SharepointClient\\": "src/"
+        },
+        "files": [
+            "src/Utils/helpers.php"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    "require": {
+        "php": "^8.2",
+        "firebase/php-jwt": "^6.11"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.0"
+    }
 }
