--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,16 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "@setup-sharepoint"
+        ],
+        "post-update-cmd": [
+            "@setup-sharepoint"
+        ],
+        "setup-sharepoint": [
+            "php vendor/jsanga-des/php-sharepoint-graph-api/scripts/setup.php"
+        ]
     }
 }
