chore(env): update environment variable

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 # Configuración del entorno de ejecución
 # Entorno: development o production
-APP_ENV=development
+SHAREPOINT_ENV=local
 SHAREPOINT_DEBUG=true
 # Nivel de registro: DEBUG (desarrollo) o ERROR (producción)
 SHAREPOINT_LOG_LEVEL=DEBUG
